[gd_scene load_steps=23 format=2]

[ext_resource path="res://Level 1.gd" type="Script" id=1]
[ext_resource path="res://Assets/Background_vf.png" type="Texture" id=2]
[ext_resource path="res://Assets/Kayu AS.png" type="Texture" id=3]
[ext_resource path="res://Assets/Ayam Normal Idle.png" type="Texture" id=4]
[ext_resource path="res://fan.gd" type="Script" id=5]
[ext_resource path="res://Assets/fan_blue_00.png" type="Texture" id=6]
[ext_resource path="res://Assets/fan_blue_01.png" type="Texture" id=7]
[ext_resource path="res://Assets/fan_blue_02.png" type="Texture" id=8]
[ext_resource path="res://lamp.gd" type="Script" id=9]
[ext_resource path="res://Assets/LAMPP.png" type="Texture" id=10]
[ext_resource path="res://Makanan.gd" type="Script" id=11]
[ext_resource path="res://Assets/Makanan.png" type="Texture" id=12]
[ext_resource path="res://Assets/Water.png" type="Texture" id=13]
[ext_resource path="res://Assets/Vaksin.png" type="Texture" id=14]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="Theme" id=8]
VScrollBar/icons/decrement = null
VScrollBar/icons/decrement_highlight = null
VScrollBar/icons/increment = null
VScrollBar/icons/increment_highlight = null
VScrollBar/styles/grabber = SubResource( 3 )
VScrollBar/styles/grabber_highlight = SubResource( 4 )
VScrollBar/styles/grabber_pressed = SubResource( 5 )
VScrollBar/styles/scroll = SubResource( 6 )
VScrollBar/styles/scroll_focus = SubResource( 7 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 40.0
} ]

[node name="Level 1" type="Control"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 639.5, 359 )
scale = Vector2( 0.652551, 0.718 )
texture = ExtResource( 2 )

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1280.0
margin_bottom = 720.0
rect_clip_content = false
theme = SubResource( 8 )
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="PanelContainer" parent="ScrollContainer"]
margin_right = 1280.0
margin_bottom = 2100.0
rect_min_size = Vector2( 1280, 2100 )
custom_styles/panel = SubResource( 2 )

[node name="Kayu 1" type="Node2D" parent="ScrollContainer/VBoxContainer"]
editor/display_folded = true
position = Vector2( 15, -200 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite2" type="Sprite" parent="ScrollContainer/VBoxContainer/Kayu 1"]
position = Vector2( 290, 300 )
scale = Vector2( 0.79989, 0.79989 )
texture = ExtResource( 3 )

[node name="Sprite3" type="Sprite" parent="ScrollContainer/VBoxContainer/Kayu 1"]
position = Vector2( 540, 300 )
scale = Vector2( 0.79989, 0.79989 )
texture = ExtResource( 3 )

[node name="Sprite4" type="Sprite" parent="ScrollContainer/VBoxContainer/Kayu 1"]
position = Vector2( 790, 300 )
scale = Vector2( 0.79989, 0.79989 )
texture = ExtResource( 3 )

[node name="Sprite5" type="Sprite" parent="ScrollContainer/VBoxContainer/Kayu 1"]
position = Vector2( 1040, 300 )
scale = Vector2( 0.79989, 0.79989 )
texture = ExtResource( 3 )

[node name="Baris 1" type="Node2D" parent="ScrollContainer/VBoxContainer"]
editor/display_folded = true
position = Vector2( 15, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Kayu 1" type="Sprite" parent="ScrollContainer/VBoxContainer/Baris 1"]
position = Vector2( 290, 300 )
scale = Vector2( 0.79989, 0.79989 )
texture = ExtResource( 3 )

[node name="Kayu 2" type="Sprite" parent="ScrollContainer/VBoxContainer/Baris 1"]
position = Vector2( 540, 300 )
scale = Vector2( 0.79989, 0.79989 )
texture = ExtResource( 3 )

[node name="Kayu 3" type="Sprite" parent="ScrollContainer/VBoxContainer/Baris 1"]
position = Vector2( 790, 300 )
scale = Vector2( 0.79989, 0.79989 )
texture = ExtResource( 3 )

[node name="Kayu 4" type="Sprite" parent="ScrollContainer/VBoxContainer/Baris 1"]
position = Vector2( 1040, 300 )
scale = Vector2( 0.79989, 0.79989 )
texture = ExtResource( 3 )

[node name="Ayam 1" type="Sprite" parent="ScrollContainer/VBoxContainer/Baris 1"]
position = Vector2( 235, 160 )
scale = Vector2( 0.199558, 0.199558 )
texture = ExtResource( 4 )

[node name="Ayam 2" type="Sprite" parent="ScrollContainer/VBoxContainer/Baris 1"]
position = Vector2( 485, 160 )
scale = Vector2( 0.199558, 0.199558 )
texture = ExtResource( 4 )

[node name="Ayam 3" type="Sprite" parent="ScrollContainer/VBoxContainer/Baris 1"]
position = Vector2( 735, 160 )
scale = Vector2( 0.199558, 0.199558 )
texture = ExtResource( 4 )

[node name="Ayam 4" type="Sprite" parent="ScrollContainer/VBoxContainer/Baris 1"]
position = Vector2( 985, 160 )
scale = Vector2( 0.199558, 0.199558 )
texture = ExtResource( 4 )

[node name="Bk1" type="Button" parent="ScrollContainer/VBoxContainer/Baris 1"]
margin_left = -10.0
margin_top = 75.0
margin_right = 84.0
margin_bottom = 222.0
focus_mode = 0
toggle_mode = true
enabled_focus_mode = 0
flat = true
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="k1" type="AnimatedSprite" parent="ScrollContainer/VBoxContainer/Baris 1/Bk1"]
position = Vector2( 50, 80 )
scale = Vector2( 0.138432, 0.138432 )
frames = SubResource( 1 )

[node name="BL1" type="Button" parent="ScrollContainer/VBoxContainer/Baris 1"]
margin_left = 585.0
margin_top = 73.0
margin_right = 630.0
margin_bottom = 127.0
focus_mode = 0
toggle_mode = true
enabled_focus_mode = 0
flat = true
script = ExtResource( 9 )
__meta__ = {
"_edit_group_": true
}

[node name="L1" type="Sprite" parent="ScrollContainer/VBoxContainer/Baris 1/BL1"]
position = Vector2( 21.3478, 62.9874 )
scale = Vector2( 0.487998, 0.487998 )
texture = ExtResource( 10 )
hframes = 2

[node name="Baris 2" type="Node2D" parent="ScrollContainer/VBoxContainer"]
editor/display_folded = true
position = Vector2( 15, 200 )
__meta__ = {
"_edit_group_": true
}

[node name="Kayu 1" type="Sprite" parent="ScrollContainer/VBoxContainer/Baris 2"]
position = Vector2( 290, 300 )
scale = Vector2( 0.79989, 0.79989 )
texture = ExtResource( 3 )

[node name="Kayu 2" type="Sprite" parent="ScrollContainer/VBoxContainer/Baris 2"]
position = Vector2( 540, 300 )
scale = Vector2( 0.79989, 0.79989 )
texture = ExtResource( 3 )

[node name="Kayu 3" type="Sprite" parent="ScrollContainer/VBoxContainer/Baris 2"]
position = Vector2( 790, 300 )
scale = Vector2( 0.79989, 0.79989 )
texture = ExtResource( 3 )

[node name="Kayu 4" type="Sprite" parent="ScrollContainer/VBoxContainer/Baris 2"]
position = Vector2( 1040, 300 )
scale = Vector2( 0.79989, 0.79989 )
texture = ExtResource( 3 )

[node name="Ayam 1" type="Sprite" parent="ScrollContainer/VBoxContainer/Baris 2"]
position = Vector2( 235, 160 )
scale = Vector2( 0.199558, 0.199558 )
texture = ExtResource( 4 )

[node name="Ayam 2" type="Sprite" parent="ScrollContainer/VBoxContainer/Baris 2"]
position = Vector2( 485, 160 )
scale = Vector2( 0.199558, 0.199558 )
texture = ExtResource( 4 )

[node name="Ayam 3" type="Sprite" parent="ScrollContainer/VBoxContainer/Baris 2"]
position = Vector2( 735, 160 )
scale = Vector2( 0.199558, 0.199558 )
texture = ExtResource( 4 )

[node name="Ayam 4" type="Sprite" parent="ScrollContainer/VBoxContainer/Baris 2"]
position = Vector2( 985, 160 )
scale = Vector2( 0.199558, 0.199558 )
texture = ExtResource( 4 )

[node name="Bk1" type="Button" parent="ScrollContainer/VBoxContainer/Baris 2"]
margin_left = -10.0
margin_top = 75.0
margin_right = 84.0
margin_bottom = 222.0
focus_mode = 0
toggle_mode = true
enabled_focus_mode = 0
flat = true
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="k1" type="AnimatedSprite" parent="ScrollContainer/VBoxContainer/Baris 2/Bk1"]
position = Vector2( 50, 80 )
scale = Vector2( 0.138432, 0.138432 )
frames = SubResource( 1 )

[node name="BL1" type="Button" parent="ScrollContainer/VBoxContainer/Baris 2"]
margin_left = 585.0
margin_top = 73.0
margin_right = 630.0
margin_bottom = 127.0
focus_mode = 0
toggle_mode = true
enabled_focus_mode = 0
flat = true
script = ExtResource( 9 )
__meta__ = {
"_edit_group_": true
}

[node name="L1" type="Sprite" parent="ScrollContainer/VBoxContainer/Baris 2/BL1"]
position = Vector2( 21.3478, 62.9874 )
scale = Vector2( 0.487998, 0.487998 )
texture = ExtResource( 10 )
hframes = 2

[node name="Tools" type="Node2D" parent="."]
script = ExtResource( 11 )

[node name="makanan" type="Button" parent="Tools"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1176.0
margin_top = 127.0
margin_right = 1265.0
margin_bottom = 171.0
flat = true
__meta__ = {
"_edit_group_": true
}

[node name="makanan2" type="Sprite" parent="Tools/makanan"]
position = Vector2( 44, 23 )
scale = Vector2( 0.0964079, 0.0964079 )
texture = ExtResource( 12 )

[node name="Air" type="Button" parent="Tools"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1200.0
margin_top = 320.0
margin_right = 1238.0
margin_bottom = 380.0
flat = true
__meta__ = {
"_edit_group_": true
}

[node name="air" type="Sprite" parent="Tools/Air"]
position = Vector2( 20, 30 )
scale = Vector2( 0.0964079, 0.0964079 )
texture = ExtResource( 13 )

[node name="vaksin" type="Button" parent="Tools"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1198.0
margin_top = 527.0
margin_right = 1242.0
margin_bottom = 575.0
flat = true
__meta__ = {
"_edit_group_": true
}

[node name="Vaksin" type="Sprite" parent="Tools/vaksin"]
position = Vector2( 22, 23 )
scale = Vector2( 0.0964079, 0.0964079 )
texture = ExtResource( 14 )
[connection signal="toggled" from="ScrollContainer/VBoxContainer/Baris 1/Bk1" to="ScrollContainer/VBoxContainer/Baris 1/Bk1" method="_on_Bk1_toggled"]
[connection signal="toggled" from="ScrollContainer/VBoxContainer/Baris 1/BL1" to="ScrollContainer/VBoxContainer/Baris 1/BL1" method="_on_BL1_toggled"]
[connection signal="toggled" from="ScrollContainer/VBoxContainer/Baris 2/Bk1" to="ScrollContainer/VBoxContainer/Baris 2/Bk1" method="_on_Bk1_toggled"]
[connection signal="toggled" from="ScrollContainer/VBoxContainer/Baris 2/BL1" to="ScrollContainer/VBoxContainer/Baris 2/BL1" method="_on_BL1_toggled"]
[connection signal="pressed" from="Tools/makanan" to="Tools" method="_on_makanan_pressed"]
[connection signal="pressed" from="Tools/Air" to="Tools" method="_on_air_pressed"]
[connection signal="pressed" from="Tools/vaksin" to="Tools" method="_on_vaksin_pressed"]
